<?xml version="1.0"?>
<package format="2">
  <name>rosplan_bt_executor</name>
  <version>0.0.0</version>
  <description>The rosplan_clients package</description>

  <maintainer email="ana@traclabs.com">Ana C.Huaman Quispe</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>behaviortree_cpp_v3</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rosplan_ext_msgs</depend>
  <depend>rosplan_clients</depend>
  <depend>rosplan_planning_system</depend>
  <depend>lifecycle</depend>
  
  <export>
  </export>

</package>
