<?xml version="1.0"?>
<package format="2">
  <name>rosplan_bt_tests</name>
  <version>0.0.0</version>
  <description>The rosplan_bt_tests package</description>

  <maintainer email="ana@todo.todo">ana</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>behaviortree_cpp_v3</depend>
  <depend>roscpp</depend>
  <depend>rosplan_dispatch_msgs</depend>
  <depend>rosplan_planning_system</depend>
  <depend>rosplan_clients</depend>

  <export>
  </export>

</package>
