<?xml version="1.0"?>
<package format="2">

  <name>rosplan_ext_msgs</name>
  <version>0.0.0</version>
  
  <description>Extension messages for rosplan.</description>
  <maintainer email="ana@traclabs.com">A.C. Huaman Quispe</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/KCL-Planning/ROSPlan</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>genmsg</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>actionlib_msgs</depend>



  <export></export>
</package>
